--- a/trunk/CHANGELOG.txt
+++ b/trunk/CHANGELOG.txt
@@ -14,6 +14,10 @@
 * Better compatibility with Oracle databases. The database migration 
   no longer tries to create tables with long names when long
   table names are not supported by the underlying database connector.
+* Server can now be configured to automatically downcase the
+  username entered by users (dowcase_username option). So if a user
+  enters "JSmith", the system will convert it to "jsmith" if the
+  downcase_username option is set to true.
 * Fixed bug with ActiveRecord 2.0.2 where service tickets were not
   being given a type (issue #37).
 
