--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,20 +1,21 @@
 === 0.6.0 :: In Progress
 
-* When an authentication failure occurs (because the user submitted
-  invalid credentials or the login ticket is missing), the server
-  now returns a 401 (Unauthorized) response instead of 200.
 * Much of the supporting functionality that makes RubyCAS-Server
   act as a well-behaved Linux service has been abstracted out
   into its own library. This new library is called Picnic and is
   now a gem dependency for RubyCAS-Server. You can find out more about
   it at http://code.google.com/p/camping-picnic/.
+* When an authentication failure occurs (because the user submitted
+  invalid credentials or the login ticket is missing), the server
+  now returns a 401 (Unauthorized) response instead of 200.
 * An encryption-enabled version of the SQL authenticator is now
   available. For more info have a look at:
   http://code.google.com/p/rubycas-server/wiki/UsingTheSQLEncryptedAuthenticator
 * Better compatibility with Oracle databases. The database migration 
   no longer tries to create tables with long names when long
-  table names are not supported by the underlying database connector.
-* Server can now be configured to automatically downcase the
+  table names are not supported by the underlying database connector
+  (issue #15).
+* The server can now be configured to automatically downcase the
   username entered by users (dowcase_username option). So if a user
   enters "JSmith", the system will convert it to "jsmith" if the
   downcase_username option is set to true.
