--- a/wiki/HowToConfigure.wiki
+++ b/wiki/HowToConfigure.wiki
@@ -55,12 +55,12 @@ For Rails, we will use [http://code.google.com/p/rubycas-client/ RubyCAS-Client]
 
   # `cd` into your Rails apps' root directory and type:
     `./script/plugin install http://rubycas-client.googlecode.com/svn/trunk/rubycas-client`
-  # Somewhere in your Rails apps' `config/environment.rb` file, add this line:
-    `CAS::Filter.cas_base_url = "https://login.example.com/cas"`
+  # Somewhere in your Rails apps' `config/environment.rb` file, add the following line:
+    `CASClient::Frameworks::Rails::Filter.configure(:cas_base_url => "https://login.example.com/") `
   # Since we want to protect the entire Rails application (rather than just some subset of controllers), we will add the following filter to our ApplicationController:
     {{{
 class ApplicationController < ActionController::Base
-  before_filter CAS::Filter
+  before_filter CASClient::Frameworks::Rails::Filter
 
   # ...
 end
@@ -73,7 +73,7 @@ and redirect to the CAS server's logout URI:
 
 {{{
 session.delete(:casfilteruser)
-redirect_to(CAS::Filter.logout_url) and return
+redirect_to(CASClient::Frameworks::Rails::Filter.client.logout_url(request.referer)) and return
 }}}
 
 
