--- a/wiki/UsageScenarios.wiki
+++ b/wiki/UsageScenarios.wiki
@@ -20,7 +20,7 @@ Four main scenarios are covered:
 
 ---
 
-== Scenario 1: Low-load Company Intranet ==
+== Scenario 1: Company Intranet ==
 
 Your company or organization has several web applications, all of which should be accessible only to authenticated users. Accessing any page within these websites should automatically redirect the user to the CAS login screen. Your user accounts are stored and managed by Active Directory. This is, more or less, the canonical CAS usage scenario.
 
@@ -47,7 +47,7 @@ Your websites to be protected by CAS should be configured as described in the [H
 
 ---
 
-== Scenario 2: Public Website with high load and/or optional authentication ==
+== Scenario 2: Public Website with High Load and/or Optional Authentication ==
 
 Your web application(s) are publicly accessible by anonymous users, but on the homepage you want to provide a _Login_ link allowing members to authenticate with CAS. Once authenticated, users should see a customized version of the home page (for example with a "Hello, John Smith!" message). Some areas should also require CAS authentication (i.e. no anonymous access).
 
