--- a/wiki/QuickStart.wiki
+++ b/wiki/QuickStart.wiki
@@ -1,5 +1,6 @@
-#labels Featured
+#labels Featured,Phase-Deploy
 =Installation=
+#summary Step-by-step installation and usage instructions
 
 ===Requirements===
 
