Edited wiki page through web user interface.

--- a/wiki/UsageScenarios.wiki
+++ b/wiki/UsageScenarios.wiki
@@ -106,4 +106,4 @@ _To be written_
 
 _To be written_
 
-See http://groups.google.com/group/rubycas-server/t/d04731de27e5824c for some general ideas on how to do this.
+See http://groups.google.com/group/rubycas-server/t/d04731de27e5824c for some general ideas on how to use CAS to authenticate web service clients.
