--- a/wiki/UsageScenarios.wiki
+++ b/wiki/UsageScenarios.wiki
@@ -3,9 +3,9 @@
 
 = Introduction =
 
-There are many ways to make use of the CAS architecture. CAS can act as a basic, local authentication mechanism for a stand-alone web application, all the way to acting as an enterprise-level central authentication system for all HTTP-based services, as part of an Active Directory domain.
+There are many ways to make use of the CAS architecture. CAS can be used as a basic local login mechanism for a stand-alone web application, but it also scale up to an enterprise-level central authentication system for all HTTP-based services, as part of an Active Directory domain.
 
-This page describes some of the more common usage scenarios, and explains how to implement  them using RubyCAS-Server. When discussing the client side of the CAS equation, we often refer to [http://code.google.com/p/rubycas-client/ RubyCAS-Client], however any full-featured CAS client can be used in its place (as should be true for the server as well).
+This page describes some of the more common usage scenarios and explains how to implement  them using RubyCAS-Server. When discussing the client side of the CAS equation, we often refer to [http://code.google.com/p/rubycas-client/ RubyCAS-Client], however any full-featured CAS client can be used (this should be true for the CAS server as well).
 
 *Before looking at any of these scenarios*, you should have a look at the [HowToConfigure basic configuration guide] for RubyCAS-Server. The various configurations described below assume that you already have a basic RubyCAS-Server up and running.
 
